[package]
name = "cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.47", features = ["derive"] }
rust-embed = { version = "8.7.2", features = ["include-exclude"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
