[package]
name = "cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
api = { path = "../api", features = ["ssr"] }
axum = { workspace = true }
clap = { workspace = true }
leptos = { workspace = true, features = ["ssr", "nightly"] }
leptos_axum = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true }
