[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
name = "frontend"
crate-type = ["cdylib", "rlib"]

[dependencies]
api = { path = "../api", features = ["csr"] }
console_error_panic_hook = { workspace = true }
leptos = { workspace = true, features = ["csr", "nightly"] }
thaw = { workspace = true }
wasm-bindgen = { workspace = true }
